--- a/STM32CubeIDE/CM7/.cproject
+++ b/STM32CubeIDE/CM7/.cproject
@@ -128,6 +128,7 @@
                 <option IS_BUILTIN_EMPTY="false" IS_VALUE_EMPTY="false" id="com.st.stm32cube.ide.mcu.gnu.managedbuild.tool.cpp.linker.option.directories.7590135034" name="Library search path (-L)" superClass="com.st.stm32cube.ide.mcu.gnu.managedbuild.tool.cpp.linker.option.directories" useByScannerDiscovery="false" valueType="libPaths">
                   <listOptionValue builtIn="false" value="C:/projects/sparx_customers/UC/DoubleVent/CS/GUI_Experiments/TouchGfx_Tutorial/CM7/Middlewares/ST/touchgfx/lib/core/cortex_m7/gcc"/>
                   <listOptionValue builtIn="false" value="C:/Users/dsmoot/Documents/TouchGrafx_QP/TouchGfx_Tutorial/CM7/Middlewares/ST/touchgfx/lib/core/cortex_m7/gcc"/>
+                  <listOptionValue builtIn="false" value="C:/projects/TouchGrafx_QP/CM7/Middlewares/ST/touchgfx/lib/core/cortex_m7/gcc"/>
                 </option>
                 <option IS_BUILTIN_EMPTY="false" IS_VALUE_EMPTY="false" id="com.st.stm32cube.ide.mcu.gnu.managedbuild.tool.cpp.linker.option.libraries.8759000950" name="Libraries (-l)" superClass="com.st.stm32cube.ide.mcu.gnu.managedbuild.tool.cpp.linker.option.libraries" useByScannerDiscovery="false" valueType="libs">
                   <listOptionValue builtIn="false" value=":libtouchgfx-float-abi-hard.a"/>
@@ -288,6 +289,7 @@
                   <listOptionValue builtIn="false" value="C:/git/stm32h747i-disco/STM32H747I-DISCO/CM7/Middlewares/ST/touchgfx/lib/core/cortex_m7/gcc"/>
                   <listOptionValue builtIn="false" value="C:/projects/sparx_customers/UC/DoubleVent/CS/GUI_Experiments/TouchGfx_Tutorial/CM7/Middlewares/ST/touchgfx/lib/core/cortex_m7/gcc"/>
                   <listOptionValue builtIn="false" value="C:/Users/dsmoot/Documents/TouchGrafx_QP/TouchGfx_Tutorial/CM7/Middlewares/ST/touchgfx/lib/core/cortex_m7/gcc"/>
+                  <listOptionValue builtIn="false" value="C:/projects/TouchGrafx_QP/CM7/Middlewares/ST/touchgfx/lib/core/cortex_m7/gcc"/>
                 </option>
                 <option IS_BUILTIN_EMPTY="false" IS_VALUE_EMPTY="false" id="com.st.stm32cube.ide.mcu.gnu.managedbuild.tool.cpp.linker.option.libraries.2006534800" name="Libraries (-l)" superClass="com.st.stm32cube.ide.mcu.gnu.managedbuild.tool.cpp.linker.option.libraries" valueType="libs">
                   <listOptionValue builtIn="false" value=":libtouchgfx-float-abi-hard.a"/>
@@ -453,6 +455,7 @@
                 <option IS_BUILTIN_EMPTY="false" IS_VALUE_EMPTY="false" id="com.st.stm32cube.ide.mcu.gnu.managedbuild.tool.cpp.linker.option.directories.586240292" name="Library search path (-L)" superClass="com.st.stm32cube.ide.mcu.gnu.managedbuild.tool.cpp.linker.option.directories" useByScannerDiscovery="false" valueType="libPaths">
                   <listOptionValue builtIn="false" value="C:/projects/sparx_customers/UC/DoubleVent/CS/GUI_Experiments/TouchGfx_Tutorial/CM7/Middlewares/ST/touchgfx/lib/core/cortex_m7/gcc"/>
                   <listOptionValue builtIn="false" value="C:/Users/dsmoot/Documents/TouchGrafx_QP/TouchGfx_Tutorial/CM7/Middlewares/ST/touchgfx/lib/core/cortex_m7/gcc"/>
+                  <listOptionValue builtIn="false" value="C:/projects/TouchGrafx_QP/CM7/Middlewares/ST/touchgfx/lib/core/cortex_m7/gcc"/>
                 </option>
                 <option IS_BUILTIN_EMPTY="false" IS_VALUE_EMPTY="false" id="com.st.stm32cube.ide.mcu.gnu.managedbuild.tool.cpp.linker.option.libraries.400002151" name="Libraries (-l)" superClass="com.st.stm32cube.ide.mcu.gnu.managedbuild.tool.cpp.linker.option.libraries" useByScannerDiscovery="false" valueType="libs">
                   <listOptionValue builtIn="false" value=":libtouchgfx-float-abi-hard.a"/>
